Profile image UI and backend changes

--- a/src/main/resources/static/Angular-Code/src/app/app.component.html
+++ b/src/main/resources/static/Angular-Code/src/app/app.component.html
@@ -1,1 +1,8 @@
+<img *ngIf="profilePicture"
+     [src]="profilePicture"
+     alt="Profile Picture"
+     width="96"
+     height="96"
+     style="border-radius: 50%; object-fit: cover;">
+
 <router-outlet></router-outlet>
