--- a/src/main/resources/static/Angular-Code/src/app/app.component.html
+++ b/src/main/resources/static/Angular-Code/src/app/app.component.html
@@ -5,4 +5,6 @@
      height="96"
      style="border-radius: 50%; object-fit: cover;">
 
+<div *ngIf="tokenExpiredMessage">{{tokenExpiredMessage}}</div>
+
 <router-outlet></router-outlet>
